--- a/index.html
+++ b/index.html
@@ -1,43 +1,93 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #000000;
+      color: #ffffff;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>SmartServ- Login </title>
-  </head>
-  <body style="background: #0e0e0e;">
+    .login-container {
+      background-color: #222222;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      width: 300px;
+      text-align: center;
+    }
 
-        <div class="card text-center container" style="background: #222222;">
+    .login-container img {
+      width: 200px; /* Adjust the image width as needed */
+      height: auto; /* Maintain aspect ratio */
+      margin-bottom: 20px;
+    }
 
-                <div class="card-body">
-                        <div class="card text-center containerinner" style="background: #0e0e0e;">
-                            <img src="images/logo.png " class="card-img-top w-75" >
-                            <form class="w-75 p-3" action="#" name="form1">
-                                    <div class="form-group">
-                                      <input type="email" required class="form-control" id="email" name="email" placeholder="Username" >
-                                    </div>
-                                    <div class="form-group">
-                                      <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
-                                    </div>
-                                    <input type="submit" class="btn but form-control mt-3" onClick=" Javascript:checkEmail(); return CheckPassword(document.form1.password); " value="Login">
-                            </form>
-                            <a href="mailto:support@smartserv.io?subject=Password RESET&body=Hello this E-Mail is in view of reseting your password." class="form-group" style="color: white; text-decoration: underline;">Forgot your password?</a>
-                        </div>
-                </div>
+    .login-container h2 {
+      color: #ffffff;
+    }
 
-        </div>
+    .login-form {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="js/ss.js"></script>
-  </body>
+    .form-group {
+      display: flex;
+      flex-direction: column;
+    }
+
+    .form-group label {
+      margin-bottom: 5px;
+      color: #aaaaaa;
+    }
+
+    .form-group input {
+      padding: 8px;
+      border: 1px solid #444444;
+      border-radius: 4px;
+      color: #000000; 
+    }
+
+    .login-btn {
+      padding: 10px;
+      background-color: #22FF00;
+      color: #ffffff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+
+<div class="login-container">
+  <img src="test-image.png" alt="Test Image">
+  <h2>Login</h2>
+  <form class="login-form" action="#" name="form1">
+    <div class="form-group">
+      <input type="email" required class="form-control" id="email" name="email" placeholder="Username">
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
+    </div>
+    <input type="submit" class="btn but form-control mt-3 login-btn" onClick="checkEmail(); return CheckPassword(document.form1.password);" value="Login">
+    <a href="mailto:support@smartserv.io?subject=Password RESET&body=Hello this E-Mail is in view of reseting your password." class="form-group" style="color: white; text-decoration: underline;">Forgot your password?</a>
+
+  </form>
+</div>
+
+<script src="ss.js"></script>
+
+</body>
 </html>
