--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -27,8 +26,8 @@
     }
 
     .login-container img {
-      width: 200px; /* Adjust the image width as needed */
-      height: auto; /* Maintain aspect ratio */
+      width: 200px; 
+      height: auto; 
       margin-bottom: 20px;
     }
 
